--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2694,12 +2694,157 @@
    "id": "6ca09552-051d-4cbb-9dc6-b110d317c88b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "bike_sharing = pd.read_csv('day.csv')\n",
+    "bike_sharing['dteday'] = pd.to_datetime(bike_sharing['dteday'])\n",
+    "weekday_averages = bike_sharing.groupby('weekday').mean()[['casual', 'registered']].reset_index() # It's not essential to understand how this code works, we'll cover this in a later course\n",
+    "plt.bar(weekday_averages['weekday'],weekday_averages['registered'])\n",
+    "plt.xticks(ticks=[0, 1, 2, 3, 4, 5,6], labels=['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'], rotation=30)\n",
+    "plt.show()\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4f17346-c157-41d0-8c09-dabd394dc6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "bike_sharing = pd.read_csv('day.csv')\n",
+    "bike_sharing['dteday'] = pd.to_datetime(bike_sharing['dteday'])\n",
+    "plt.hist(bike_sharing['casual'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca9fd856-ec4e-4c80-ab40-fd9ff40304d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "401f0cbf-8d58-403f-a08c-6f4f7773614c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "traffic['Slowness in traffic (%)'].plot.hist()\n",
+    "plt.title('Distribution of Slowness in traffic (%)')\n",
+    "plt.xlabel('Slowness in traffic (%)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e43c739-877b-4711-8da6-3c9e8f07d326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "incidents = traffic.drop(['Hour (Coded)', 'Slowness in traffic (%)'],axis=1)\n",
+    "incidents.sum().plot.barh()\n",
+    "plt.show()\n",
+    "              "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01e38538-11ef-4d55-9dd3-79e7dfe236e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "traffic.plot.scatter(x='Slowness in traffic (%)',\n",
+    "                     y='Lack of electricity')\n",
+    "plt.show()\n",
+    "traffic.plot.scatter(x='Slowness in traffic (%)', y='Point of flooding')\n",
+    "plt.show()\n",
+    "traffic.plot.scatter(x='Slowness in traffic (%)', y='Semaphore off')\n",
+    "plt.show()\n",
+    "                     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85b8f159-7e56-4242-b4d6-4a7291c9ccc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "slowness_20_or_more = traffic[traffic['Slowness in traffic (%)'] > 20]\n",
+    "slowness_20_or_more.drop(['Slowness in traffic (%)', 'Hour (Coded)'],axis=1,inplace=True)\n",
+    "incident_frequencies = slowness_20_or_more.sum()\n",
+    "incident_frequencies.plot.barh()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f341fbb-54f8-4e80-865c-78e01d1ac863",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd077eee-e573-47ec-b9c3-12f79ec7e4a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed93bc7-6a30-49b3-bbaa-14bf5a98c6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b130c29-1cac-427e-9c97-0a7c23d7420c",
    "metadata": {},
    "outputs": [],
    "source": []
