--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2823,7 +2823,16 @@
    "id": "8f341fbb-54f8-4e80-865c-78e01d1ac863",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "housing = pd.read_csv('housing.csv')\n",
+    "sns.set_theme()\n",
+    "sns.relplot(data=housing, x='Gr Liv Area', y='SalePrice')\n",
+    "plt.show()\n",
+    "correlation = 'positive'"
+   ]
   },
   {
    "cell_type": "code",
@@ -2831,7 +2840,18 @@
    "id": "dd077eee-e573-47ec-b9c3-12f79ec7e4a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "housing = pd.read_csv('housing.csv')\n",
+    "sns.set_theme()\n",
+    "sns.relplot(data=housing, x='Gr Liv Area', y='SalePrice',\n",
+    "            hue='Overall Qual', palette='RdYlGn',\n",
+    "            size='Garage Area', sizes=(1,300))\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
