--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2859,7 +2859,16 @@
    "id": "3ed93bc7-6a30-49b3-bbaa-14bf5a98c6cb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "housing = pd.read_csv('housing.csv')\n",
+    "sns.set_theme()\n",
+    "sns.relplot(data=housing, x='Gr Liv Area', y='SalePrice')\n",
+    "plt.show()\n",
+    "correlation = 'positive'"
+   ]
   },
   {
    "cell_type": "code",
