--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -2876,6 +2876,180 @@
    "id": "9b130c29-1cac-427e-9c97-0a7c23d7420c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday']\n",
+    "traffic_per_day = {}\n",
+    "for i, day in zip(range(0, 135, 27), days):\n",
+    "    each_day_traffic = traffic[i:i+27]\n",
+    "    traffic_per_day[day] = each_day_traffic\n",
+    "\n",
+    "\n",
+    "for day in days:\n",
+    "    traffic_per_day[day].plot.line(x='Hour (Coded)',\n",
+    "                                   y='Slowness in traffic (%)')\n",
+    "    plt.title(day)\n",
+    "    plt.ylim([0, 25])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e37375b-0aa9-499e-80c5-1bca3fa1451b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday']\n",
+    "traffic_per_day = {}\n",
+    "for i, day in zip(range(0, 135, 27), days):\n",
+    "    each_day_traffic = traffic[i:i+27]\n",
+    "    traffic_per_day[day] = each_day_traffic\n",
+    "\n",
+    "\n",
+    "for day in days:\n",
+    "    plt.plot(traffic_per_day[day]['Hour (Coded)'],\n",
+    "             traffic_per_day[day]['Slowness in traffic (%)'],\n",
+    "             label=day)\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75b0c31f-5345-4aa6-81ee-b87a468aab7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.subplot(3, 2, 1)\n",
+    "plt.subplot(3, 2, 2)\n",
+    "plt.subplot(3, 2, 6)\n",
+    "\n",
+    "\n",
+    "plt.subplot(3, 2, 3)\n",
+    "plt.subplot(3, 2, 4)\n",
+    "plt.subplot(3, 2, 5)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9da0c0c8-ff1f-4596-9b0c-89dc23d806ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday']\n",
+    "traffic_per_day = {}\n",
+    "for i, day in zip(range(0, 135, 27), days):\n",
+    "    each_day_traffic = traffic[i:i+27]\n",
+    "    traffic_per_day[day] = each_day_traffic\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(10,12))\n",
+    "\n",
+    "for i, day in zip(range(1,6), days):\n",
+    "    plt.subplot(3, 2, i)\n",
+    "    plt.plot(traffic_per_day[day]['Hour (Coded)'],\n",
+    "        traffic_per_day[day]['Slowness in traffic (%)'])\n",
+    "    plt.title(day)\n",
+    "    plt.ylim([0,25])\n",
+    "    \n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff6ed2a-1d54-4452-b965-dc2bdeff758d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "traffic = pd.read_csv('traffic_sao_paulo.csv', sep=';')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].str.replace(',', '.')\n",
+    "traffic['Slowness in traffic (%)'] = traffic['Slowness in traffic (%)'].astype(float)\n",
+    "\n",
+    "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday']\n",
+    "traffic_per_day = {}\n",
+    "for i, day in zip(range(0, 135, 27), days):\n",
+    "    each_day_traffic = traffic[i:i+27]\n",
+    "    traffic_per_day[day] = each_day_traffic\n",
+    "    \n",
+    "plt.figure(figsize=(10,12))\n",
+    "\n",
+    "for i, day in zip(range(1,6), days):\n",
+    "    plt.subplot(3, 2, i)\n",
+    "    plt.plot(traffic_per_day[day]['Hour (Coded)'],\n",
+    "        traffic_per_day[day]['Slowness in traffic (%)'])\n",
+    "    plt.title(day)\n",
+    "    plt.ylim([0,25])\n",
+    "\n",
+    "\n",
+    "plt.subplot(3, 2, 6)\n",
+    "\n",
+    "for day in days:\n",
+    "    plt.plot(traffic_per_day[day]['Hour (Coded)'],                                                                                                                                               \n",
+    "             traffic_per_day[day]['Slowness in traffic (%)'],\n",
+    "             label=day)                            \n",
+    "    plt.ylim([0,25])\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad4642ce-ae58-4793-ae10-2d8d0a266f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "plt.barh(top20_deathtoll['Country_Other'],top20_deathtoll['Total_Deaths'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32935e35-67e4-482b-b29e-745e6efd5020",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
