--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -3050,6 +3050,409 @@
    "id": "32935e35-67e4-482b-b29e-745e6efd5020",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "fig, ax =plt.subplots(figsize=(4.5, 6))\n",
+    "ax.barh(top20_deathtoll['Country_Other'],top20_deathtoll['Total_Deaths'])\n",
+    "plt.show()        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93031a7f-00d2-4438-8761-94174750dd91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(4.5, 6))\n",
+    "ax.barh(top20_deathtoll['Country_Other'],\n",
+    "         top20_deathtoll['Total_Deaths'])\n",
+    "for location in ['left', 'right', 'bottom', 'top']:\n",
+    "    ax.spines[location].set_visible(False)\n",
+    "ax.tick_params(bottom=False,left=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d18b15f-608f-4178-a055-506aef3e4569",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(4.5, 6))\n",
+    "ax.barh(top20_deathtoll['Country_Other'],\n",
+    "       top20_deathtoll['Total_Deaths'],height=0.45)\n",
+    "\n",
+    "for location in ['left', 'right', 'top', 'bottom']:\n",
+    "    ax.spines[location].set_visible(False)\n",
+    "    \n",
+    "ax.tick_params(bottom=False, left=False)\n",
+    "ax.set_xticks([0,150000,300000])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067ab99c-302d-46b1-9eca-e17b36665974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(4.5, 6))\n",
+    "ax.barh(top20_deathtoll['Country_Other'],\n",
+    "        top20_deathtoll['Total_Deaths'],\n",
+    "        height=0.45, color='#af0b1e' )\n",
+    "\n",
+    "for location in ['left', 'right', 'top', 'bottom']:\n",
+    "    ax.spines[location].set_visible(False)\n",
+    "ax.xaxis.tick_top()    \n",
+    "ax.tick_params(bottom=False, left=False, top=False)\n",
+    "ax.tick_params(axis='x', colors='grey')\n",
+    "ax.set_xticks([0, 150000, 300000])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3625fa63-da27-43ad-b9e4-32d12494e388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(4.5, 6))\n",
+    "ax.barh(top20_deathtoll['Country_Other'],\n",
+    "        top20_deathtoll['Total_Deaths'],\n",
+    "        height=0.45, color='#af0b1e')\n",
+    "\n",
+    "for location in ['left', 'right', 'top', 'bottom']:\n",
+    "    ax.spines[location].set_visible(False)\n",
+    "    \n",
+    "ax.set_xticks([0, 150000, 300000])\n",
+    "ax.xaxis.tick_top()\n",
+    "ax.tick_params(top=False, left=False)\n",
+    "ax.tick_params(axis='x', colors='grey')\n",
+    "ax.text(x=-80000, y=23.5, s='The Death Toll Worldwide Is 1.5M+', size=17, weight='bold')\n",
+    "ax.text(x=-80000, y=22.5, s='Top 20 countries by death toll (December 2020)', size=12)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1dbbfa1-8f08-45e2-bfd7-6d80246fc932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "top20_deathtoll = pd.read_csv('top20_deathtoll.csv')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(4.5, 6))\n",
+    "ax.barh(top20_deathtoll['Country_Other'],\n",
+    "        top20_deathtoll['Total_Deaths'],\n",
+    "        height=0.45, color='#af0b1e')\n",
+    "\n",
+    "for location in ['left', 'right', 'top', 'bottom']:\n",
+    "    ax.spines[location].set_visible(False)\n",
+    "    \n",
+    "ax.set_xticks([0, 150000, 300000])\n",
+    "ax.xaxis.tick_top()\n",
+    "ax.tick_params(top=False, left=False)\n",
+    "ax.tick_params(axis='x', colors='grey')\n",
+    "ax.text(x=-80000, y=23.5,\n",
+    "        s='The Death Toll Worldwide Is 1.5M+',\n",
+    "        weight='bold', size=17)\n",
+    "ax.text(x=-80000, y=22.5,\n",
+    "        s='Top 20 countries by death toll (December 2020)',\n",
+    "        size=12)\n",
+    "ax.set_xticklabels(['0', '150,000', '300,000'])\n",
+    "ax.set_yticklabels([])\n",
+    "country_names = top20_deathtoll['Country_Other']\n",
+    "for i,country in zip(range(0, 20), country_names):\n",
+    "    ax.text(x=-80000, y=i-0.15, s=country)\n",
+    "ax.axvline(x=150000, ymin=0.045, c='grey', alpha=0.5)\n",
+    "plt.show()    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebe07f99-aeb2-4b21-ae68-0af92caeca18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "death_toll = pd.read_csv('covid_avg_deaths.csv')\n",
+    "fig, axes = plt.subplots(nrows=4, ncols=1, figsize=(6,8))\n",
+    "for ax in axes:\n",
+    "    ax.plot(death_toll['Month'],death_toll['New_deaths'])\n",
+    "    ax.set_xticks([])\n",
+    "    ax.set_yticks([])\n",
+    "    ax.tick_params(axis='both')\n",
+    "    for location in ['left', 'right','top','bottom']:\n",
+    "        ax.spines[location].set_visible(False)\n",
+    "plt.show("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d6ea86a-b597-4bb8-bd94-b588a1e47f92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "death_toll = pd.read_csv('covid_avg_deaths.csv')\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=4, ncols=1, figsize=(6,8))\n",
+    "\n",
+    "for ax in axes:\n",
+    "    ax.plot(death_toll['Month'], death_toll['New_deaths'],\n",
+    "            color='#af0b1e', alpha=0.1)\n",
+    "    ax.set_yticklabels([])\n",
+    "    ax.set_xticklabels([])\n",
+    "    ax.tick_params(bottom=False, left=False) \n",
+    "    for location in ['left', 'right', 'top', 'bottom']:\n",
+    "        ax.spines[location].set_visible(False)\n",
+    "\n",
+    "axes[0].plot(death_toll['Month'][:3], death_toll['New_deaths'][:3],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[1].plot(death_toll['Month'][2:6], death_toll['New_deaths'][2:6],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[2].plot(death_toll['Month'][5:10], death_toll['New_deaths'][5:10],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[3].plot(death_toll['Month'][9:12], death_toll['New_deaths'][9:12],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6edaf297-be3f-4f45-8631-d8d0f85b0bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "death_toll = pd.read_csv('covid_avg_deaths.csv')\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=4, ncols=1, figsize=(6,8))\n",
+    "\n",
+    "for ax in axes:\n",
+    "    ax.plot(death_toll['Month'], death_toll['New_deaths'],\n",
+    "            color='#af0b1e', alpha=0.1)\n",
+    "    ax.set_yticklabels([])\n",
+    "    ax.set_xticklabels([])\n",
+    "    ax.tick_params(bottom=False, left=False) \n",
+    "    for location in ['left', 'right', 'top', 'bottom']:\n",
+    "        ax.spines[location].set_visible(False)\n",
+    "\n",
+    "axes[0].plot(death_toll['Month'][:3], death_toll['New_deaths'][:3],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[1].plot(death_toll['Month'][2:6], death_toll['New_deaths'][2:6],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[2].plot(death_toll['Month'][5:10], death_toll['New_deaths'][5:10],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[3].plot(death_toll['Month'][9:12], death_toll['New_deaths'][9:12],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "\n",
+    "axes[0].text(0.5, -80, '0', alpha=0.5)\n",
+    "axes[0].text(3.5, 2000, '1,844', alpha=0.5)\n",
+    "axes[0].text(11.5, 2400, '2,247', alpha=0.5)\n",
+    "\n",
+    "axes[0].text(1.1, -300, 'Jan - Mar', color='#af0b1e',\n",
+    "         weight='bold', rotation=3)\n",
+    "axes[1].text(3.7, 800, 'Mar - Jun', color='#af0b1e',\n",
+    "         weight='bold')\n",
+    "axes[2].text(7.1, 500, 'Jun - Oct', color='#af0b1e',\n",
+    "         weight='bold')\n",
+    "axes[3].text(10.5, 600, 'Oct - Dec', color='#af0b1e',\n",
+    "         weight='bold', rotation=45)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6e71f3-177c-44a0-b137-e00504963074",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax.text(x=0.5, y= 3500, s='The virus kills 851 people each day', size=14, weight='bold')\n",
+    "ax.text(x=0.5, y= 3150, s='Average number of daily deaths per month in the US', size=12)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "475baf64-9249-4567-b67f-7021b6ece7c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "death_toll = pd.read_csv('covid_avg_deaths.csv')\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=4, ncols=1, figsize=(6,8))\n",
+    "\n",
+    "for ax in axes:\n",
+    "    ax.plot(death_toll['Month'], death_toll['New_deaths'],\n",
+    "            color='#af0b1e', alpha=0.1)\n",
+    "    ax.set_yticklabels([])\n",
+    "    ax.set_xticklabels([])\n",
+    "    ax.tick_params(bottom=False, left=False) \n",
+    "    for location in ['left', 'right', 'top', 'bottom']:\n",
+    "        ax.spines[location].set_visible(False)\n",
+    "        \n",
+    "axes[0].plot(death_toll['Month'][:3], death_toll['New_deaths'][:3],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[1].plot(death_toll['Month'][2:6], death_toll['New_deaths'][2:6],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[2].plot(death_toll['Month'][5:10], death_toll['New_deaths'][5:10],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[3].plot(death_toll['Month'][9:12], death_toll['New_deaths'][9:12],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "\n",
+    "axes[0].text(0.5, -80, '0', alpha=0.5)\n",
+    "axes[0].text(3.5, 2000, '1,844', alpha=0.5)\n",
+    "axes[0].text(11.5, 2400, '2,247', alpha=0.5)\n",
+    "\n",
+    "axes[0].text(1.1, -300, 'Jan - Mar', color='#af0b1e',\n",
+    "         weight='bold', rotation=3)\n",
+    "axes[1].text(3.7, 800, 'Mar - Jun', color='#af0b1e', weight='bold')\n",
+    "axes[2].text(7.1, 500, 'Jun - Oct', color='#af0b1e', weight='bold')\n",
+    "axes[3].text(10.5, 600, 'Oct - Dec', color='#af0b1e', weight='bold',\n",
+    "        rotation=45)\n",
+    "axes[0].text(x=0.5, y= 3500, s='The virus kills 851 people each day', size=14, weight='bold')\n",
+    "axes[0].text(x=0.5, y= 3150, s='Average number of daily deaths per month in the US', size=12)\n",
+    "\n",
+    "plt.show()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4cea8cb-7c4b-4e07-b9e4-656532a00809",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "death_toll = pd.read_csv('covid_avg_deaths.csv')\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=4, ncols=1, figsize=(6,8))\n",
+    "\n",
+    "for ax in axes:\n",
+    "    ax.plot(death_toll['Month'], death_toll['New_deaths'],\n",
+    "            color='#af0b1e', alpha=0.1)\n",
+    "    ax.set_yticklabels([])\n",
+    "    ax.set_xticklabels([])\n",
+    "    ax.tick_params(bottom=False, left=False) \n",
+    "    for location in ['left', 'right', 'top', 'bottom']:\n",
+    "        ax.spines[location].set_visible(False)\n",
+    "        \n",
+    "axes[0].plot(death_toll['Month'][:3], death_toll['New_deaths'][:3],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[1].plot(death_toll['Month'][2:6], death_toll['New_deaths'][2:6],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[2].plot(death_toll['Month'][5:10], death_toll['New_deaths'][5:10],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "axes[3].plot(death_toll['Month'][9:12], death_toll['New_deaths'][9:12],\n",
+    "         color='#af0b1e', linewidth=2.5)\n",
+    "\n",
+    "axes[0].text(0.5, -80, '0', alpha=0.5)\n",
+    "axes[0].text(3.5, 2000, '1,844', alpha=0.5)\n",
+    "axes[0].text(11.5, 2400, '2,247', alpha=0.5)\n",
+    "\n",
+    "axes[0].text(1.1, -300, 'Jan - Mar', color='#af0b1e',\n",
+    "         weight='bold', rotation=3)\n",
+    "axes[1].text(3.7, 800, 'Mar - Jun', color='#af0b1e', weight='bold')\n",
+    "axes[2].text(7.1, 500, 'Jun - Oct', color='#af0b1e', weight='bold')\n",
+    "axes[3].text(10.5, 600, 'Oct - Dec', color='#af0b1e', weight='bold',\n",
+    "        rotation=45)\n",
+    "\n",
+    "axes[0].text(0.5, 3500, 'The virus kills 851 people each day',\n",
+    "         size=14, weight='bold')\n",
+    "axes[0].text(0.5, 3150, 'Average number of daily deaths per month in the US',size=12) \n",
+    "axes[0].axhline(y=1600, xmin=0.5, xmax=0.8, linewidth=6, color='#af0b1e', alpha=0.1)\n",
+    "axes[1].axhline(y=1600, xmin=0.5, xmax=0.8, linewidth=6, color='#af0b1e', alpha=0.1)\n",
+    "axes[2].axhline(y=1600, xmin=0.5, xmax=0.8, linewidth=6, color='#af0b1e', alpha=0.1)\n",
+    "axes[3].axhline(y=1600, xmin=0.5, xmax=0.8, linewidth=6, color='#af0b1e', alpha=0.1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e09c7ba-bf32-4efe-ada8-61160c9b57b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "red_wine = pd.read_csv('winequality-red.csv', sep=';')\n",
+    "red_corr = red_wine.corr()['quality'][:-1]\n",
+    "white_wine = pd.read_csv('winequality-white.csv', sep=';')\n",
+    "white_corr = white_wine.corr()['quality'][:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e99f4646-9b5d-408d-9a3e-deff54705166",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0d1d05b-c11c-4844-b5fc-e6859f0d0390",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "930cfa32-ae43-41b0-a78d-30302619cf14",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
