--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -3437,7 +3437,16 @@
    "id": "e99f4646-9b5d-408d-9a3e-deff54705166",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "style.use('fivethirtyeight')\n",
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.barh(white_corr.index, white_corr, left=2,linewidth=0.5, height=0.5)\n",
+    "ax.barh(red_corr.index, red_corr,linewidth=0.5, height=0.5)\n",
+    "ax.grid(visible=None)\n",
+    "ax.set_xticks([])\n",
+    "ax.set_yticks([])\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -3445,12 +3454,223 @@
    "id": "c0d1d05b-c11c-4844-b5fc-e6859f0d0390",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "style.use('fivethirtyeight')\n",
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.barh(white_corr.index, white_corr, left=2, height=0.5)\n",
+    "ax.barh(red_corr.index, red_corr, height=0.5, left=-0.1)\n",
+    "\n",
+    "ax.grid(False)\n",
+    "ax.set_yticklabels([])\n",
+    "ax.set_xticklabels([])\n",
+    "\n",
+    "x_coords = {'Alcohol': 0.82, 'Sulphates': 0.77, 'pH': 0.91,\n",
+    "            'Density': 0.80, 'Total Sulfur Dioxide': 0.59,\n",
+    "            'Free Sulfur Dioxide': 0.6, 'Chlorides': 0.77,\n",
+    "            'Residual Sugar': 0.67, 'Citric Acid': 0.76,\n",
+    "            'Volatile Acidity': 0.67, 'Fixed Acidity': 0.71}\n",
+    "y_coord = 9.8\n",
+    "for y_label, x_coord in x_coords.items():\n",
+    "    ax.text(x_coord, y_coord, y_label)\n",
+    "    y_coord -= 1\n",
+    "ax.axvline(x=0.5, ymin=0.1, ymax=0.9, linewidth=1, color='grey', alpha=0.1) \n",
+    "ax.axvline(x=1.45, ymin=0.1, ymax=0.9, linewidth=1, color='grey', alpha=0.1)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "930cfa32-ae43-41b0-a78d-30302619cf14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "style.use('fivethirtyeight')\n",
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.barh(white_corr.index, white_corr, left=2, height=0.5)\n",
+    "ax.barh(red_corr.index, red_corr, height=0.5, left=-0.1)\n",
+    "\n",
+    "ax.grid(False)\n",
+    "ax.set_yticklabels([])\n",
+    "ax.set_xticklabels([])\n",
+    "\n",
+    "x_coords = {'Alcohol': 0.82, 'Sulphates': 0.77, 'pH': 0.91,\n",
+    "            'Density': 0.80, 'Total Sulfur Dioxide': 0.59,\n",
+    "            'Free Sulfur Dioxide': 0.6, 'Chlorides': 0.77,\n",
+    "            'Residual Sugar': 0.67, 'Citric Acid': 0.76,\n",
+    "            'Volatile Acidity': 0.67, 'Fixed Acidity': 0.71}\n",
+    "y_coord = 9.8\n",
+    "for y_label, x_coord in x_coords.items():\n",
+    "    ax.text(x_coord, y_coord, y_label)\n",
+    "    y_coord -= 1\n",
+    "    \n",
+    "ax.axvline(0.5, c='grey', alpha=0.1, linewidth=1,\n",
+    "           ymin=0.1, ymax=0.9)\n",
+    "ax.axvline(1.45, c='grey', alpha=0.1, linewidth=1,\n",
+    "           ymin=0.1, ymax=0.9)\n",
+    "\n",
+    "ax.axhline(-1, color='grey', linewidth=1, alpha=0.5,\n",
+    "          xmin=0.01, xmax=0.32)\n",
+    "ax.text(-0.7, -1.7, '-0.5'+ ' '*31 + '+0.5',\n",
+    "        color='grey', alpha=0.5)\n",
+    "ax.axhline(-1, color='grey', linewidth=1, alpha=0.5,\n",
+    "           xmin=0.67, xmax=0.98)\n",
+    "ax.text(1.43, -1.7, '-0.5'+ ' '*31 + '+0.5',\n",
+    "        color='grey', alpha=0.5)\n",
+    "ax.axhline(y=11, xmin=0.01, xmax=0.32,linewidth=1, color='grey', alpha=0.5)\n",
+    "ax.text(x=-0.33, y=11.2, weight='bold', s='RED WINE')\n",
+    "ax.axhline(y=11, xmin=0.67, xmax=0.98, color='grey', linewidth=1, alpha=0.5)\n",
+    "ax.text(x=1.75, y=11.2, weight='bold', s='WHITE WINE')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c313699-af09-46a8-960e-91884ee6c959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "style.use('fivethirtyeight')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.barh(white_corr.index, white_corr, left=2, height=0.5)\n",
+    "ax.barh(red_corr.index, red_corr, height=0.5, left=-0.1)\n",
+    "\n",
+    "ax.grid(False)\n",
+    "ax.set_yticklabels([])\n",
+    "ax.set_xticklabels([])\n",
+    "\n",
+    "x_coords = {'Alcohol': 0.82, 'Sulphates': 0.77, 'pH': 0.91,\n",
+    "            'Density': 0.80, 'Total Sulfur Dioxide': 0.59,\n",
+    "            'Free Sulfur Dioxide': 0.6, 'Chlorides': 0.77,\n",
+    "            'Residual Sugar': 0.67, 'Citric Acid': 0.76,\n",
+    "            'Volatile Acidity': 0.67, 'Fixed Acidity': 0.71}\n",
+    "y_coord = 9.8\n",
+    "for y_label, x_coord in x_coords.items():\n",
+    "    ax.text(x_coord, y_coord, y_label)\n",
+    "    y_coord -= 1\n",
+    "    \n",
+    "ax.axvline(0.5, c='grey', alpha=0.1, linewidth=1,\n",
+    "           ymin=0.1, ymax=0.9)\n",
+    "ax.axvline(1.45, c='grey', alpha=0.1, linewidth=1,\n",
+    "           ymin=0.1, ymax=0.9)\n",
+    "\n",
+    "ax.axhline(-1, color='grey', linewidth=1, alpha=0.5,\n",
+    "          xmin=0.01, xmax=0.32)\n",
+    "ax.text(-0.7, -1.7, '-0.5'+ ' '*31 + '+0.5',\n",
+    "        color='grey', alpha=0.5)\n",
+    "ax.axhline(-1, color='grey', linewidth=1, alpha=0.5,\n",
+    "           xmin=0.67, xmax=0.98)\n",
+    "ax.text(1.43, -1.7, '-0.5'+ ' '*31 + '+0.5',\n",
+    "        color='grey', alpha=0.5)\n",
+    "\n",
+    "ax.axhline(11, color='grey', linewidth=1, alpha=0.5,\n",
+    "           xmin=0.01, xmax=0.32)\n",
+    "ax.text(-0.33, 11.2, 'RED WINE', weight='bold')\n",
+    "ax.axhline(11, color='grey', linewidth=1, alpha=0.5,\n",
+    "           xmin=0.67, xmax=0.98)\n",
+    "ax.text(1.75, 11.2, 'WHITE WINE', weight='bold')\n",
+    "\n",
+    "ax.text(-0.7, -2.9,\n",
+    "        'DATAQUEST' + ' '*94 + 'Source: P. Cortez et al.',\n",
+    "        color = '#f0f0f0', backgroundcolor = '#4d4d4d',\n",
+    "        fontsize=12)\n",
+    "ax.text(-0.7, 13.5,'Wine Quality Most Strongly Correlated With Alcohol Level', fontsize=17, weight='bold')\n",
+    "ax.text(-0.7, 12.7,'Correlation values between wine quality and wine properties (alcohol, pH, etc.)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c98a05db-79cb-472f-afca-e0ca67d90ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_white = white_corr >= 0\n",
+    "color_map_white = positive_white.map({True:'#33A1C9', False:'#ffae42'})\n",
+    "\n",
+    "style.use('fivethirtyeight')\n",
+    "fig, ax = plt.subplots(figsize=(9, 5))\n",
+    "ax.barh(white_corr.index, white_corr, left=2, height=0.5,\n",
+    "        color=color_map_white)\n",
+    "ax.barh(red_corr.index, red_corr, height=0.5, left=-0.1)\n",
+    "\n",
+    "ax.grid(False)\n",
+    "ax.set_yticklabels([])\n",
+    "ax.set_xticklabels([])\n",
+    "\n",
+    "x_coords = {'Alcohol': 0.82, 'Sulphates': 0.77, 'pH': 0.91,\n",
+    "            'Density': 0.80, 'Total Sulfur Dioxide': 0.59,\n",
+    "            'Free Sulfur Dioxide': 0.6, 'Chlorides': 0.77,\n",
+    "            'Residual Sugar': 0.67, 'Citric Acid': 0.76,\n",
+    "            'Volatile Acidity': 0.67, 'Fixed Acidity': 0.71}\n",
+    "y_coord = 9.8\n",
+    "\n",
+    "for y_label, x_coord in x_coords.items():\n",
+    "    ax.text(x_coord, y_coord, y_label)\n",
+    "    y_coord -= 1\n",
+    "    \n",
+    "ax.axvline(0.5, c='grey', alpha=0.1, linewidth=1,\n",
+    "           ymin=0.1, ymax=0.9)\n",
+    "ax.axvline(1.45, c='grey', alpha=0.1, linewidth=1,\n",
+    "           ymin=0.1, ymax=0.9)\n",
+    "\n",
+    "ax.axhline(-1, color='grey', linewidth=1, alpha=0.5,\n",
+    "          xmin=0.01, xmax=0.32)\n",
+    "ax.text(-0.7, -1.7, '-0.5'+ ' '*31 + '+0.5',\n",
+    "        color='grey', alpha=0.5)\n",
+    "\n",
+    "ax.axhline(-1, color='grey', linewidth=1, alpha=0.5,\n",
+    "           xmin=0.67, xmax=0.98)\n",
+    "ax.text(1.43, -1.7, '-0.5'+ ' '*31 + '+0.5',\n",
+    "        color='grey', alpha=0.5)\n",
+    "\n",
+    "ax.axhline(11, color='grey', linewidth=1, alpha=0.5,\n",
+    "          xmin=0.01, xmax=0.32)\n",
+    "ax.text(-0.33, 11.2, 'RED WINE', weight='bold')\n",
+    "\n",
+    "ax.axhline(11, color='grey', linewidth=1, alpha=0.5,\n",
+    "          xmin=0.67, xmax=0.98)\n",
+    "ax.text(1.75, 11.2, 'WHITE WINE', weight='bold')\n",
+    "\n",
+    "ax.text(-0.7, -2.9, 'DATAQUEST' + ' '*92 + 'Source: P. Cortez et al.',\n",
+    "        color = '#f0f0f0', backgroundcolor = '#4d4d4d',\n",
+    "       fontsize=12)\n",
+    "\n",
+    "ax.text(-0.7, 13.5,\n",
+    "        'Wine Quality Most Strongly Correlated With Alcohol Level',\n",
+    "        fontsize=17, weight='bold')\n",
+    "ax.text(-0.7, 12.7,\n",
+    "        'Correlation values between wine quality and wine properties (alcohol, pH, etc.)')\n",
+    "positive_red = red_corr >= 0\n",
+    "color_map_red = positive_red.map({True:'#33A1C9', False:'#ffae42'})\n",
+    "ax.barh(red_corr.index, red_corr, height=0.5, left=-0.1,\n",
+    "        color=color_map_red)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dd3d75e-d23d-4386-89d6-ca15421f85ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf22b416-23bc-4b64-833c-84745c965f99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3febd2af-79c6-4e82-b3ac-e2a6dfc34e7b",
    "metadata": {},
    "outputs": [],
    "source": []
