--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -3657,12 +3657,259 @@
    "id": "8dd3d75e-d23d-4386-89d6-ca15421f85ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "wnba = pd.read_csv('wnba.csv')\n",
+    "print(wnba.head(5))\n",
+    "print(wnba.tail(5))\n",
+    "print(wnba.shape)\n",
+    "parameter = wnba['Games Played'].max()\n",
+    "sample = wnba.sample(30,random_state = 1)\n",
+    "statistic = sample['Games Played'].max()\n",
+    "sampling_error = parameter - statistic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "cf22b416-23bc-4b64-833c-84745c965f99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 5,\n",
+       " 6,\n",
+       " 7,\n",
+       " 8,\n",
+       " 9,\n",
+       " 10,\n",
+       " 11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 18,\n",
+       " 19,\n",
+       " 20,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 30,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 34,\n",
+       " 35,\n",
+       " 36,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 44,\n",
+       " 45,\n",
+       " 46,\n",
+       " 47,\n",
+       " 48,\n",
+       " 49,\n",
+       " 50,\n",
+       " 51,\n",
+       " 52,\n",
+       " 53,\n",
+       " 54,\n",
+       " 55,\n",
+       " 56,\n",
+       " 57,\n",
+       " 58,\n",
+       " 59,\n",
+       " 60,\n",
+       " 61,\n",
+       " 62,\n",
+       " 63,\n",
+       " 64,\n",
+       " 65,\n",
+       " 66,\n",
+       " 67,\n",
+       " 68,\n",
+       " 69,\n",
+       " 70,\n",
+       " 71,\n",
+       " 72,\n",
+       " 73,\n",
+       " 74,\n",
+       " 75,\n",
+       " 76,\n",
+       " 77,\n",
+       " 78,\n",
+       " 79,\n",
+       " 80,\n",
+       " 81,\n",
+       " 82,\n",
+       " 83,\n",
+       " 84,\n",
+       " 85,\n",
+       " 86,\n",
+       " 87,\n",
+       " 88,\n",
+       " 89,\n",
+       " 90,\n",
+       " 91,\n",
+       " 92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 98,\n",
+       " 99]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(1,100))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf22b416-23bc-4b64-833c-84745c965f99",
+   "id": "3febd2af-79c6-4e82-b3ac-e2a6dfc34e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "wnba = pd.read_csv('wnba.csv')\n",
+    "parameter = wnba['PTS'].mean()\n",
+    "statistic = wnba['PTS'].mean()\n",
+    "list_1=[]\n",
+    "for i in range(100):\n",
+    "    list_1.append(wnba['PTS'].sample(10,random_state=i).mean())  \n",
+    "plt.scatter(x=range(1,101), y=list_1)\n",
+    "plt.axhline(parameter)\n",
+    "plt.show()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639aeb54-83c0-47c6-a878-84fe0a94460d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wnba[\"Pts_per_game\"] = wnba[\"PTS\"] / wnba[\"Games Played\"]\n",
+    "stratum_G = wnba[wnba.Pos == 'G']\n",
+    "stratum_F = wnba[wnba.Pos == 'F']\n",
+    "stratum_C = wnba[wnba.Pos == 'C']\n",
+    "stratum_GF = wnba[wnba.Pos == 'G/F']\n",
+    "stratum_FC = wnba[wnba.Pos == 'F/C']\n",
+    "points_per_position = {}\n",
+    "\n",
+    "for stratum, position in [(stratum_G, 'G'), (stratum_F, 'F'), (stratum_C, 'C'),\n",
+    "                (stratum_GF, 'G/F'), (stratum_FC, 'F/C')]:\n",
+    "    sample = stratum['Pts_per_game'].sample(10, random_state = 0) \n",
+    "    points_per_position[position] = sample.mean()\n",
+    "position_most_points = max(points_per_position, key = points_per_position.get)    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59394e48-b03e-4c82-83fb-ac79c831a8aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wnba[\"Pts_per_game\"] = wnba[\"PTS\"] / wnba[\"Games Played\"]\n",
+    "stratum_G = wnba[wnba.Pos == 'G']\n",
+    "stratum_F = wnba[wnba.Pos == 'F']\n",
+    "stratum_C = wnba[wnba.Pos == 'C']\n",
+    "stratum_GF = wnba[wnba.Pos == 'G/F']\n",
+    "stratum_FC = wnba[wnba.Pos == 'F/C']\n",
+    "points_per_position = {}\n",
+    "\n",
+    "for stratum, position in [(stratum_G, 'G'), (stratum_F, 'F'), (stratum_C, 'C'),\n",
+    "                (stratum_GF, 'G/F'), (stratum_FC, 'F/C')]:\n",
+    "    sample = stratum['Pts_per_game'].sample(10, random_state = 0) \n",
+    "    points_per_position[position] = sample.mean()\n",
+    "position_most_points = max(points_per_position, key = points_per_position.get)    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c96da0-32fe-43a9-842d-50fe52d854d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "under_12 = wnba[wnba['Games Played'] <= 12]\n",
+    "btw_13_22 = wnba[(wnba['Games Played'] > 12) & (wnba['Games Played'] <= 22)]\n",
+    "over_23 = wnba[wnba['Games Played'] > 22]\n",
+    "proportional_sampling_means = []\n",
+    "for i in range(100):\n",
+    "    sample_under_12 = under_12['PTS'].sample(1, random_state = i)\n",
+    "    sample_btw_13_22 = btw_13_22['PTS'].sample(2, random_state = i)\n",
+    "    sample_over_23 = over_23['PTS'].sample(7, random_state = i)\n",
+    "\n",
+    "    final_sample = pd.concat([sample_under_12, sample_btw_13_22, sample_over_23])\n",
+    "\n",
+    "    proportional_sampling_means.append(final_sample.mean())\n",
+    "\n",
+    "plt.scatter(range(1,101), proportional_sampling_means)\n",
+    "plt.axhline(wnba['PTS'].mean())\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56e19e56-5861-4aeb-a5d8-05c97d208fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "under_12 = wnba[wnba['Games Played'] <= 12]\n",
+    "btw_13_22 = wnba[(wnba['Games Played'] > 12) & (wnba['Games Played'] <= 22)]\n",
+    "over_23 = wnba[wnba['Games Played'] > 22]\n",
+    "proportional_sampling_means = []\n",
+    "for i in range(100):\n",
+    "    sample_under_12 = under_12['PTS'].sample(1, random_state = i)\n",
+    "    sample_btw_13_22 = btw_13_22['PTS'].sample(2, random_state = i)\n",
+    "    sample_over_23 = over_23['PTS'].sample(7, random_state = i)\n",
+    "\n",
+    "    final_sample = pd.concat([sample_under_12, sample_btw_13_22, sample_over_23])\n",
+    "\n",
+    "    proportional_sampling_means.append(final_sample.mean())\n",
+    "\n",
+    "plt.scatter(range(1,101), proportional_sampling_means)\n",
+    "plt.axhline(wnba['PTS'].mean())\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97084d7b-55a9-4c8e-aed4-745a473d2ed8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3670,7 +3917,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3febd2af-79c6-4e82-b3ac-e2a6dfc34e7b",
+   "id": "5a75de31-1d75-4b0c-ae1b-5235d536fc21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21c837c8-24c2-4abf-82f8-39cae6250db3",
    "metadata": {},
    "outputs": [],
    "source": []
