--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -3912,7 +3912,16 @@
    "id": "97084d7b-55a9-4c8e-aed4-745a473d2ed8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "wnba = pd.read_csv('wnba.csv')\n",
+    "\n",
+    "variables = {'Name': '', 'Team': '', 'Pos': '', 'Height': '', 'BMI': '',\n",
+    "             'Birth_Place': '', 'Birthdate': '', 'Age': '', 'College': '', 'Experience': '',\n",
+    "             'Games Played': '', 'MIN': '', 'FGM': '', 'FGA': '',\n",
+    "             '3PA': '', 'FTM': '', 'FTA': '', 'FT%': '', 'OREB': '', 'DREB': '',\n",
+    "             'REB': '', 'AST': '', 'PTS': ''}"
+   ]
   },
   {
    "cell_type": "code",
@@ -3920,7 +3929,12 @@
    "id": "5a75de31-1d75-4b0c-ae1b-5235d536fc21",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wnba.columns\n",
+    "empty_list=[]\n",
+    "nominal_scale = ['Name','Team','Birth_Place', 'College','Pos']\n",
+    "nominal_scale.sort()"
+   ]
   },
   {
    "cell_type": "code",
