--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -3942,6 +3942,62 @@
    "id": "21c837c8-24c2-4abf-82f8-39cae6250db3",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "interval = ['Birthdate','Weight_deviation']\n",
+    "ratio = ['15:00','3P%','3PA','AST','Age','BLK','BMI','DD2',\n",
+    "'DREB','Experience','FG%','FGA','FGM','FT%','FTA','FTM','Games Played','Height','MIN','OREB','PTS','REB','STL','TD3','TO',\n",
+    "'Weight']\n",
+    "interval.sort()\n",
+    "ratio.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2163e74-ecc3-4e65-af6e-670969386d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_pts_ordinal(row):\n",
+    "    if row['PTS'] <= 20:\n",
+    "        return 'very few points'\n",
+    "    if (20 < row['PTS'] <=  80):\n",
+    "        return 'few points'\n",
+    "    if (80 < row['PTS'] <=  150):\n",
+    "        return 'many, but below average'\n",
+    "    if (150 < row['PTS'] <= 300):\n",
+    "        return 'average number of points'\n",
+    "    if (300 < row['PTS'] <=  450):\n",
+    "        return 'more than average'\n",
+    "    else:\n",
+    "        return 'much more than average'\n",
+    "    \n",
+    "wnba['PTS_ordinal_scale'] = wnba.apply(make_pts_ordinal, axis = 1)\n",
+    "\n",
+    "# Type your answer below\n",
+    "pts_ordinal_desc = wnba['PTS_ordinal_scale'].value_counts().iloc[[4,3,0,2,1,5]]  \n",
+    "print(pts_ordinal_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15a862b4-bc9c-457e-92e8-12dc429e6944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proportion_25 = wnba['Age'].value_counts(normalize=True)[25]\n",
+    "percentage_30 = wnba['Age'].value_counts(normalize=True)[30]*100\n",
+    "percentage_over_30 = (wnba['Age'] >= 30).value_counts(normalize=True)[True] * 100\n",
+    "percentage_below_23 = (wnba['Age'] <= 23).value_counts(normalize=True)[True] * 100 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba4c1398-a56d-48e6-a421-d1af71f482a1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
