--- a/06-HW5.ipynb
+++ b/06-HW5.ipynb
@@ -3998,6 +3998,76 @@
    "id": "ba4c1398-a56d-48e6-a421-d1af71f482a1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from scipy.stats import percentileofscore\n",
+    "percentile_rank_half_less = percentileofscore(a=wnba['Games Played'], score=17, kind='weak')\n",
+    "percentage_half_more = 100 - percentile_rank_half_less"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b188be85-9086-429a-922d-3215443af408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(wnba['Age'].describe())\n",
+    "age_upper_quartile = wnba['Age'].describe().iloc[6]\n",
+    "age_middle_quartile = wnba['Age'].describe(percentiles=[0.5]).iloc[4]\n",
+    "age_95th_percentile = wnba['Age'].describe(percentiles=[0.95]).iloc[5]\n",
+    "question1 = True\n",
+    "question2 = False\n",
+    "question3 = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e90efc7-63a9-4627-9ad4-b2b32395d740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import percentileofscore\n",
+    "grouped_freq_table = wnba['PTS'].value_counts(bins=10).sort_index(ascending=False)/len(wnba)*100\n",
+    "grouped_freq_table.name = 'proportion'\n",
+    "print(grouped_freq_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b451e041-ee13-4bff-b697-6b9867323500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "wnba['Exp_ordinal'].value_counts().plot.pie(figsize=(6,6),autopct='%.2f%%', title='Percentage of players in WNBA by level of experience')\n",
+    "plt.ylabel('')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d35d23ac-a8a0-4fc9-a5c3-76874527656f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ba315c3-239b-4c46-ad89-33d544d4798f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99fa8bec-b59c-42df-90f3-aeed5a684b3c",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
